<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:layout_gravity="center"
    tools:context=".view.fragments.HomeFragment">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/clGita">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">
            
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/kalash"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shree_bhagavad_gita"
                android:textColor="@color/orange"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:paddingHorizontal="@dimen/_12sdp"
                android:layout_gravity="center"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/kalash"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSetting"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:tint="@color/orange"
                android:src="@drawable/ic_settings"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/idCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardUseCompatPadding="true"
        android:elevation="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@+id/clGita">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowingVerseDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Verse of the Day"
                android:textColor="@color/orange"
                android:textSize="@dimen/_14sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVerseOfTheDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="Verse of the Day"
                android:textColor="@color/orange"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/rk"
            android:scaleType="centerCrop"
            android:alpha="0.2"/>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChapters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/chapters"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCardView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChapters">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/shimmer_layout"/>

                <include layout="@layout/shimmer_layout"/>

                <include layout="@layout/shimmer_layout"/>

                <include layout="@layout/shimmer_layout"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRecyclerChapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_chapters"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNoInternet"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/no_internet"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/idCardView"
        app:layout_constraintBottom_toTopOf="@+id/tvNoInternet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_3sdp"
        android:gravity="center"
        android:text="@string/no_internet_connection_n_check_for_saved_chapters_in_settings"
        android:textColor="@color/orange"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/ivNoInternet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>